# kinesis-client-library

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
src/: main.rs
src/dynamo_db/: dynamo_db_library.rs  mod.rs
src/kinesis_stream/: kcl.rs  mod.rs
