[package]
name = "src"
version = "0.1.0"
authors = ["Khaled Kandil <khaled.kandil@careem.com>"]

[dependencies]
uuid = { version = "0.6", features = ["v4"] }
hyper = "0.12"
rusoto_core = "0.34.0"
rusoto_kinesis = "0.34.0"
rusoto_dynamodb = "0.34.0"
rusoto_glacier = "0.34.0"
rusoto_s3 = "0.34.0"
rusoto_sts = "0.34.0"
tokio-core = "0.1"
threadpool = "1.0"
serde = "1.0.70"
serde_derive = "1.0"
serde_json = "1.0"
rocket = "0.3.15"
rocket_codegen = "0.3.15"
chrono = "0.4.5"
rust-crypto = "0.2.36"
futures = "0.1.17"
zip = "0.4.2"
b64 = "0.4.0"
libflate = "0.1"
env_logger = "0.5.13"
rusoto_credential = "0.13.0"